fixes: spacing in contents

--- a/src/components/checkout/submit/index.scss
+++ b/src/components/checkout/submit/index.scss
@@ -64,7 +64,7 @@
     background-repeat: no-repeat;
     background-size: 100%;
     background-image: url("data:image/svg+xml,%3Csvg width='500' height='500' viewBox='0 0 500 500' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='500' height='500' rx='10' fill='url(%23paint0_radial_294_512)'/%3E%3Cdefs%3E%3CradialGradient id='paint0_radial_294_512' cx='0' cy='0' r='1' gradientUnits='userSpaceOnUse' gradientTransform='translate(250 61) rotate(90) scale(345)'%3E%3Cstop stop-color='%23242424'/%3E%3Cstop offset='1' stop-color='%230A0A0A'/%3E%3C/radialGradient%3E%3C/defs%3E%3C/svg%3E%0A");
-    @include flex_col(2rem);
+    @include flex_col(1rem);
     align-items: center;
     transform: scale(0.8);
     @include media("<=tablet") {
@@ -83,7 +83,10 @@
       }
     }
     &_txt {
-      @include flex_col(3rem);
+      @include flex_col(1rem);
+      h1 {
+        font-size: 1.5rem;
+      }
       p {
         font-size: 1.1rem;
         color: #707070;
